--- a/style.less
+++ b/style.less
@@ -510,3 +510,16 @@ body.woocommerce .star-rating::before {
 .redes-sociales {
     justify-content: center;
 }
+
+.intro-left .mk-grid .page-subtitle {
+    display: none !important;
+
+}
+
+.tinv-wishlist{}
+
+.wishlist_item{
+    .button{
+        display: none !important;
+    }
+}
